--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ black==22.10.0
 
 accelerate
 einops
-longchat
+fschat@git+https://github.com/lm-sys/FastChat.git
 triton
 vllm==0.6.3
 flash-attn==1.0.5
